--- a/debian/control
+++ b/debian/control
@@ -15,12 +15,21 @@ Depends: python,
          python-dev,
          python-setuptools,
          python-virtualenv,
-         python-rdflib,
-         python-dateutil,
-         python-pairtree,
+         python-dateutil (= 1.5),
+         python-pairtree (= 0.7.1-T),
          python-recordsilo,
          python-solrpy,
+         python-rdflib,
          python-redis,
+         python-distribute,
+         python-lxml,
+         python-sqlalchemy,
+         python-webob,
+         python-WebTest,
+         python-pylons,
+         python-repoze.who-friendlyform,
+         python-repoze.who,
+         python-uuid,
          mysql-server,
          libmysql++-dev,
          git-core,
