--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
 nose
-pairtree==0.5.6-T
-pylons==0.9.7
-repoze.who==2.0a4
-repoze.who-friendlyform
-rdflib==2.4.2
-solrpy
-uuid
-redis==1.34.1
 python-dateutil==1.5
-webob==1.0.8
-sqlalchemy
-git+http://github.com/benosteen/RecordSilo.git
+pairtree==0.7.1-T
+-e git+https://github.com/dataflow/RecordSilo.git#egg=RecordSilo
+solrpy==0.9.5
+rdflib==2.4.2
+redis==2.4.11
+distribute>=0.6.38
 MySQL-python
-paster
-repoze.what-pylons
+lxml==2.3.4
+sqlalchemy==0.7.6
+webob==0.9.7
+WebTest==1.1
+pylons==1.0
+repoze.who-friendlyform
+repoze.who==2.0a4
+uuid
