--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -12,6 +12,8 @@ sqlalchemy==0.7.6
 webob==0.9.7
 WebTest==1.1
 pylons==1.0
+repoze.what-quickstart
+repoze.who-friendlyform
 repoze.profile
 repoze.who-friendlyform
 repoze.who==2.0a4
