--- a/message_workers/workers_available/worker_solr.conf
+++ b/message_workers/workers_available/worker_solr.conf
@@ -7,7 +7,7 @@ stopwaitsecs = 10
 process_name = worker_solr_%(process_num)s
 priority = 888
 directory = /var/lib/databank/message_workers/
-command = /var/lib/databank/message_workers/solr_worker.py %(process_num)s
+command = /var/lib/databank/bin/python /var/lib/databank/message_workers/solr_worker.py %(process_num)s
 autostart = true
 startsecs = 10
 stdout_logfile = /var/log/databank/worker_solr.log
