Added feature to configure the base path databank is served from in Apache, rather than assume /

--- a/development.ini
+++ b/development.ini
@@ -60,6 +60,7 @@ redis.host = localhost
 
 granary.store = /silos
 granary.uri_root = http://databank/
+base.path = databank/
 
 #profile.log_filename = /var/log/databank/profile.log
 #profile.path = /__profile__
