--- a/production.ini
+++ b/production.ini
@@ -59,6 +59,7 @@ redis.host = localhost
 
 granary.store = /silos
 granary.uri_root = http://databank/
+base.path = databank/
 
 #auth.file = /var/lib/databank/passwd
 #auth.info = /var/lib/databank/rdfdatabank/config/users.py
